# pgsleuth

./: .dockerignore  .gitignore  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: tests.yml
docs/: severity.md  writing_checkers.md
docs/rules/: README.md  column_value_at_risk.md  fk_type_mismatch.md  fk_without_on_delete.md  json_over_jsonb.md  missing_fk_index.md  missing_primary_key.md  not_valid_constraints.md  primary_key_type.md  redundant_index.md  sequence_drift.md  three_state_boolean.md  timestamp_without_tz.md  varchar_length.md
src/pgsleuth/: __init__.py  __main__.py  baseline.py  cli.py  config.py  context.py
src/pgsleuth/checkers/: __init__.py  base.py  column_value_at_risk.py  fk_type_mismatch.py  fk_without_on_delete.py  json_over_jsonb.py  missing_fk_index.py  missing_primary_key.py  not_valid_constraints.py  primary_key_type.py  redundant_index.py  sequence_drift.py  three_state_boolean.py  timestamp_without_tz.py  varchar_length.py
src/pgsleuth/db/: catalog.py  (+1 more)
tests/: conftest.py  test_auto_discovery.py  test_baseline_integration.py  test_baseline_unit.py  test_cli_baseline.py  test_cli_unsupported_version.py  test_statement_timeout.py  test_version.py
tests/checkers/: test_column_value_at_risk.py  test_fk_type_mismatch.py  test_fk_without_on_delete.py  test_json_over_jsonb.py  test_missing_fk_index.py  test_missing_primary_key.py  test_not_valid_constraints.py  test_primary_key_type.py  test_redundant_index.py  test_sequence_drift.py  test_three_state_boolean.py  test_timestamp_without_tz.py  test_varchar_length.py
(+2 files in other folders)
