[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgsleuth"
version = "0.1.0"
description = "Database consistency checker. PostgreSQL 10+."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pgsleuth contributors" }]
dependencies = [
    "psycopg[binary]>=3.1",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.4",
]

[project.scripts]
pgsleuth = "pgsleuth.cli:main"

[project.entry-points."pgsleuth.checkers"]
# Built-in checkers are auto-discovered; this group exists so third parties
# can register their own checkers via entry points.

[tool.hatch.build.targets.wheel]
packages = ["src/pgsleuth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
